--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "author": "Garrett Newman <garrett.s.newman@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "babel-preset-env": "^1.7.0",
+    "async-redis": "^1.1.5",
     "concurrently": "^4.1.0",
     "express": "^4.16.4"
   },
@@ -20,9 +20,9 @@
     "lint": "eslint ."
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.2.3",
-    "babel-cli": "^6.26.0",
-    "babel-preset-flow": "^6.23.0",
+    "babel-core": "^6.26.3",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "babel-watch": "^2.0.8",
     "eslint": "^5.12.1",
     "flow-bin": "^0.91.0",
