--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.2",
-    "three": "^0.100.0"
+    "three": "^0.100.0",
+    "uniqid": "^5.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
