--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "async-redis": "^1.1.5",
     "concurrently": "^4.1.0",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "sillyname": "^0.1.0"
   },
   "eslintConfig": {
     "extends": "react-app"
