--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.2",
+    "regl": "^1.3.11",
     "three": "^0.100.0",
     "uniqid": "^5.0.3"
   },
@@ -14,7 +15,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint .",
+    "flow": "flow check"
   },
   "eslintConfig": {
     "extends": "react-app"
