--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "react-scripts": "2.1.2",
     "regl": "^1.3.11",
     "three": "^0.100.0",
+    "touches": "^1.2.2",
     "uniqid": "^5.0.3"
   },
   "scripts": {
