--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.2",
     "regl": "^1.3.11",
+    "screenfull": "^4.0.0",
     "three": "^0.100.0",
     "touches": "^1.2.2",
     "uniqid": "^5.0.3"
