--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.1",
+    "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
     "lodash": "^4.17.11",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.2",
+    "react-swipeable-views": "^0.13.1",
     "regl": "^1.3.11",
     "screenfull": "^4.0.0",
     "three": "^0.100.0",
