--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "async-redis": "^1.1.5",
     "concurrently": "^4.1.0",
     "express": "^4.16.4",
+    "lodash": "^4.17.11",
     "sillyname": "^0.1.0"
   },
   "eslintConfig": {
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-watch": "^2.0.8",
