--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-swipeable-views": "^0.13.1",
     "regl": "^1.3.11",
     "screenfull": "^4.0.0",
+    "socket.io-client": "^2.2.0",
     "three": "^0.100.0",
     "touches": "^1.2.2",
     "uniqid": "^5.0.3"
