--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,8 @@
     "concurrently": "^4.1.0",
     "express": "^4.16.4",
     "lodash": "^4.17.11",
-    "sillyname": "^0.1.0"
+    "sillyname": "^0.1.0",
+    "socket.io": "^2.2.0"
   },
   "eslintConfig": {
     "extends": "react-app"
