--- a/server/.babelrc
+++ b/server/.babelrc
@@ -1,12 +1,16 @@
 {
   "presets": [
     [
-      "env", {
+      "@babel/preset-env",
+      {
         "targets": {
           "node": "current"
         }
       }
     ]
   ],
-  "plugins": ["transform-object-rest-spread"]
+  "plugins": [
+    "@babel/plugin-proposal-optional-chaining",
+    "@babel/plugin-proposal-object-rest-spread"
+  ]
 }
