--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint .",
-    "flow": "flow check"
+    "flow": "flow"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -39,6 +39,7 @@
     "babel-cli": "^6.26.0",
     "babel-preset-flow": "^6.23.0",
     "flow-bin": "^0.91.0",
+    "flow-typed": "^2.5.1",
     "glsl-noise": "^0.0.0",
     "glslify": "^7.0.0"
   },
