--- a/server/package.json
+++ b/server/package.json
@@ -29,9 +29,13 @@
     "@babel/plugin-proposal-optional-chaining": "^7.2.0",
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
+    "@babel/preset-flow": "^7.0.0",
+    "babel-eslint": "^10.0.1",
     "babel-watch": "^7.0.0",
     "eslint": "^5.12.1",
-    "flow-bin": "^0.91.0",
+    "eslint-plugin-flowtype": "^3.4.2",
+    "flow-bin": "^0.94.0",
+    "flow-typed": "^2.5.1",
     "prettier": "^1.16.0"
   }
 }
