--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,8 @@
   "scripts": {
     "build": "babel server.js -d dist",
     "start": "babel-watch server.js",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "jest"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -36,6 +37,7 @@
     "eslint-plugin-flowtype": "^3.4.2",
     "flow-bin": "^0.94.0",
     "flow-typed": "^2.5.1",
+    "jest": "^24.5.0",
     "prettier": "^1.16.0"
   }
 }
