--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "concurrently": "^4.1.0",
     "express": "^4.16.4",
     "lodash": "^4.17.11",
+    "randomcolor": "^0.5.4",
     "sillyname": "^0.1.0",
     "socket.io": "^2.2.0",
     "uniqid": "^5.0.3"
