--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,7 @@
     "object-hash": "^1.3.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.2",
+    "react-scripts": "^3.0.0",
     "react-swipeable-views": "^0.13.1",
     "regl": "^1.3.11",
     "screenfull": "^4.0.0",
