--- a/client/package.json
+++ b/client/package.json
@@ -7,8 +7,10 @@
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
     "lodash": "^4.17.11",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "react": "^16.8.0",
+    "react-dnd": "^9.3.4",
+    "react-dnd-touch-backend": "^9.3.4",
+    "react-dom": "^16.8.0",
     "react-scripts": "^3.0.0",
     "react-swipeable-views": "^0.13.1",
     "regl": "^1.3.11",
@@ -39,7 +41,7 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-flow": "^6.23.0",
-    "flow-bin": "^0.91.0",
+    "flow-bin": "^0.107.0",
     "flow-typed": "^2.5.1",
     "glsl-noise": "^0.0.0",
     "glslify": "^7.0.0"
