--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,10 @@
     "lodash": "^4.17.11",
     "react": "^16.8.0",
     "react-dnd": "^9.3.4",
-    "react-dnd-touch-backend": "^9.3.4",
+    "react-dnd-cjs": "^9.5.1",
+    "react-dnd-html5-backend-cjs": "^9.5.1",
+    "react-dnd-multi-backend": "^4.0.0",
+    "react-dnd-touch-backend-cjs": "^9.5.1",
     "react-dom": "^16.8.0",
     "react-scripts": "^3.0.0",
     "react-swipeable-views": "^0.13.1",
