--- a/client/package.json
+++ b/client/package.json
@@ -49,5 +49,5 @@
     "glsl-noise": "^0.0.0",
     "glslify": "^7.0.0"
   },
-  "proxy": "http://127.0.0.1:3001/"
+  "proxy": "http://localhost:3001/"
 }
