--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^3.9.1",
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
+    "copy-to-clipboard": "^3.2.0",
     "lodash": "^4.17.11",
     "react": "^16.8.0",
     "react-dnd": "^9.3.4",
