--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,7 @@
     "screenfull": "^4.0.0",
     "socket.io-client": "^2.2.0",
     "three": "^0.100.0",
-    "uniqid": "^5.0.3",
+    "uniqid": "^5.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,7 +43,7 @@
     "babel-cli": "^6.26.0",
     "babel-preset-flow": "^6.23.0",
     "flow-bin": "^0.107.0",
-    "flow-typed": "^2.5.1",
+    "flow-typed": "^2.5.1"
   },
   "proxy": "http://localhost:3001/"
 }
