--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "copy-to-clipboard": "^3.2.0",
     "lodash": "^4.17.11",
     "react": "^16.8.0",
+    "react-device-detect": "^1.11.14",
     "react-dnd": "^9.3.4",
     "react-dnd-cjs": "^9.5.1",
     "react-dnd-html5-backend-cjs": "^9.5.1",
