--- a/client/package.json
+++ b/client/package.json
@@ -18,14 +18,12 @@
     "react-dnd-multi-backend": "^4.0.0",
     "react-dnd-touch-backend-cjs": "^9.5.1",
     "react-dom": "^16.8.0",
-    "react-router": "^5.1.2",
     "react-scripts": "^3.0.0",
     "react-swipeable-views": "^0.13.1",
     "screenfull": "^4.0.0",
     "socket.io-client": "^2.2.0",
     "three": "^0.100.0",
-    "uniqid": "^5.0.3",
-    "url-parse": "^1.4.7"
+    "uniqid": "^5.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
