--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,11 @@
     "query-string": "^6.10.1",
     "react": "^16.8.0",
     "react-device-detect": "^1.11.14",
-    "react-dnd": "^9.3.4",
+    "react-dnd": "^10.0.2",
     "react-dnd-cjs": "^9.5.1",
     "react-dnd-html5-backend-cjs": "^9.5.1",
     "react-dnd-multi-backend": "^4.0.0",
+    "react-dnd-touch-backend": "^10.0.2",
     "react-dnd-touch-backend-cjs": "^9.5.1",
     "react-dom": "^16.8.0",
     "react-scripts": "^3.0.0",
