--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.39",
     "axios": "^0.18.0",
+    "color": "^3.1.2",
     "copy-to-clipboard": "^3.2.0",
     "lodash": "^4.17.11",
     "query-string": "^6.10.1",
@@ -23,6 +24,7 @@
     "react-swipeable-views": "^0.13.1",
     "screenfull": "^4.0.0",
     "socket.io-client": "^2.2.0",
+    "string-to-color": "^2.1.3",
     "three": "^0.100.0",
     "uniqid": "^5.0.3"
   },
