--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,8 @@
     "socket.io-client": "^2.2.0",
     "string-to-color": "^2.1.3",
     "three": "^0.100.0",
-    "uniqid": "^5.0.3"
+    "uniqid": "^5.0.3",
+    "url-join": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
